lazy loaded images

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
               <source media="(max-width: 900px)" srcset="img/profilepic-medium.webp" type="image/webp">
               <source media="(min-width: 900px)" srcset="img/profilepic-medium.jpg" type="image/jpeg">
-              <img src="img/profilepic-medium.jpg">
+              <img src="img/profilepic-medium.jpg" loading="lazy">
             </picture>
           </div>
           <div class="aboutMeContent">
@@ -62,55 +62,55 @@
         <h2>Skills/Tools:</h2>
         <section class="skillsContainer" id="skills">
           <div class="htmlContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="100px" width="100px" loading="lazy"/>
             <h4>HTML</h4>
           </div>
           <div class="cssContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>CSS</h4>
           </div>
           <div class="jsContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="100px" width="100px" loading="lazy"/>
             <h4>JavaScript</h4>
           </div>
           <div class="sassContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="100px" width="100px" loading="lazy"/>
             <h4>SASS</h4>
           </div>
           <div class="dotNetContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>ASP.NET Framework</h4>
           </div>
           <div class="phpContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>PHP</h4>
           </div>
           <div class="bootstrapContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>Bootstrap Framework</h4>
           </div>
           <div class="materialUiContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/materialui/materialui-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/materialui/materialui-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>Material UI Framework</h4>
           </div>
           <div class="gitContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>GIT</h4>
           </div>
           <div class="githubContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" height="100px" width="100px" loading="lazy"/>
             <h4>GitHub</h4>
           </div>
           <div class="npmContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" height="100px" width="100px" loading="lazy"/>
             <h4>NPM</h4>
           </div>
           <div class="vsCodeContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" height="100px" width="100px" loading="lazy"/>
             <h4>Visual Studio Code</h4>
           </div>
           <div class="trelloContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/trello/trello-plain.svg" height="100px" width="100px" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/trello/trello-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>Trello</h4>
           </div>
         </section>
@@ -122,7 +122,7 @@
             <picture>
               <source srcset="img/movies-tv-app.webp" type="image/webp"> 
               <source srcset="img/movies-tv-app.jpg"  type="image/jpeg">
-              <img src="img/movies-tv-app.jpg" alt="Screenshot of Movie/TV Application" width="500px" height="243px">
+              <img src="img/movies-tv-app.jpg" alt="Screenshot of Movie/TV Application" width="500px" height="243px" loading="lazy">
             </picture>
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
@@ -135,9 +135,9 @@
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" loading="lazy"/>
             </div>
             <div class="btnContainer">
               <a href="https://github.com/trevinshu/movietvapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
@@ -148,7 +148,7 @@
             <picture>
               <source srcset="img/recipeapp.webp" type="image/webp"> 
               <source srcset="img/recipeapp.jpg"  type="image/jpeg">
-              <img src="img/weatherapp.jpg" alt="Screenshot of Recipe Application" width="500px" height="243px">
+              <img src="img/weatherapp.jpg" alt="Screenshot of Recipe Application" width="500px" height="243px" loading="lazy">
             </picture>
             <h2>Recipe App</h4>
             <h4>Description:</h4>
@@ -159,9 +159,9 @@
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" loading="lazy"/>
             </div>
             <div class="btnContainer">
               <a href="https://github.com/trevinshu/recipeapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
@@ -172,7 +172,7 @@
             <picture>
               <source srcset="img/weatherapp.webp" type="image/webp"> 
               <source srcset="img/weatherapp.jpg"  type="image/jpeg">
-              <img src="img/weatherapp.jpg" alt="Screenshot of Weather Application">
+              <img src="img/weatherapp.jpg" alt="Screenshot of Weather Application"  width="500px" height="243px" loading="lazy">
             </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
@@ -181,9 +181,9 @@
               will change to something related to Tokyo. Other features of this application are a toggle to switch from Celsius to Fahrenheit and vise versa.</p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" loading="lazy"/>
             </div>
             <div class="btnContainer">
               <a href="https://github.com/trevinshu/weatherapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
@@ -194,7 +194,7 @@
             <picture>
               <source srcset="img/esw-reporting-portal-screenshot.webp" type="image/webp"> 
               <source srcset="img/esw-reporting-portal-screenshot.jpg"  type="image/jpeg">
-              <img src="img/esw-reporting-portal-screenshot.jpg" alt="Screenshot of ESW Reporting Portal">
+              <img src="img/esw-reporting-portal-screenshot.jpg" alt="Screenshot of ESW Reporting Portal" loading="lazy" width="500px" height="243px" loading="lazy">
             </picture>
             <h2>ESW Reporting Portal</h2>
             <h4>Description:</h4>
@@ -205,9 +205,9 @@
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" loading="lazy"/>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" height="75px" width="75px" loading="lazy"/>
             </div>
             <h4>Username/Password:</h4>
             <div class="usernamePasswordContainer">
