reworked the project copy

--- a/src/index.html
+++ b/src/index.html
@@ -127,9 +127,9 @@
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
             <p>
-              I built this movie/tv show web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup information on tv shows & movies. In order to do this a user can use the 
-              search input field to search for a specific movie/tv show they are looking for or they can select a movie/tv show from the pre-made categories that are displayed on the homepage when the page
-              is loaded. In order to get and display this data I used TheMovieDB API. 
+              Using TheMovieDB API I built this full responsive movie/tv show web application with HTML, SCSS & Vanilla JavaScript that allows a user to lookup information on tv shows & movies. In order to do this a user can use the 
+              search input field to search for a specific movie/tv show they are looking for or they can select a movie/tv show from a list of pre-made categories that are displayed on the homepage when the page
+              is loaded. I also custom built an arrow slider that swaps through pages of movies & tv shows.
               <br><br>
               Additional features include a dark/light mode which saves the users color mode preference to local storage so the next time they use the site the site UI will match their preferred color scheme.
             </p>
@@ -153,9 +153,9 @@
             <h2>Recipe App</h4>
             <h4>Description:</h4>
             <p>
-              I built this recipe web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup recipes. A user can use the search input field to search for recipes 
-              that match or are related to what they entered into the search input field or they can select recipe from a list of food categories that are displayed on the homepage when the page is loaded. 
-              I used the TheMealDB API to retrieve & display the data. 
+              Using TheMealDB API I built this full responsive recipe lookup web application with HTML, SCSS & Vanilla JavaScript. The user has two options to find recipes. 
+              They can select a food category from the list of food categories that are displayed on page load which will then display a number of recipes that match that category or they can search for a recipe which 
+              will output a list of recipes that match or are closely related to the search term provided by the user. I also custom designed & implemented a modal that shows a more detailed version of the recipe when clicked.
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
@@ -176,9 +176,9 @@
             </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
-            <p>I built this weather web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup the weather of a specific location. In order to 
-              search the user has to enter the city & country in the appropriate input fields and hit search. The banner image will change based on the location the inputted so if a user searches Tokyo the banner image 
-              will change to something related to Tokyo. Other features of this application are a toggle to switch from Celsius to Fahrenheit and vise versa.</p>
+            <p>Using the OpenWeather API I built this full responsive weather web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup the weather of a specific location. In order to 
+              search the weather the user has to enter the city & country code in the appropriate input fields and hit search. The banner image will change based on the location that is inputted so for example if a user searches for Tokyo the banner image 
+              will dynamically swap to something that it is related to Tokyo. Also I included a toggle that when clicked switches from Celsius to Fahrenheit & vise versa without reloading the page.</p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
@@ -198,10 +198,9 @@
             </picture>
             <h2>ESW Reporting Portal</h2>
             <h4>Description:</h4>
-            <p>Myself and a team of 18 other developers made an internal reporting service for ESW I.T. Business Advisors. We worked with our client to design this single page web application using HTML, CSS & React. 
-              We worked in a small group of three to four developers on a component that was assigned to us which we later to the application after it was completed & reviewed by our team lead. 
-              We utilized Trello to make board of tickets which kept track of what needed to done, has been completed & what needed a bit more attention. 
-              We also had weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.
+            <p>Myself and a team of 18 other developers redesigned & redeveloped an existing internal reporting service for ESW I.T. Business Advisors using HTML, CSS & React. We retrieved & displayed data using an internal API that was provided to us by the client & in smalls group of three to four developers 
+              we worked on components that were assigned to us which we later added to the application after a code review by our team leads. Myself & the other developers implemented a Trello board which kept track of what we needed to accomplish, what we have accomplished 
+              & what needed more attention from either the design team or the development team. We held weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
