updated about me

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <p>
               I am a <span>Web Developer</span> who recently graduated from NAIT (Northern Alberta Institute of Technology) with a
               <span>Diploma in Digital Media & IT specializing in Computer Software Development</span>. <br /><br />
-              I am passionate about Web Development and I aim to deliver feature rich web applications that are aesthetically pleasing, responsive and compliant with the latest accessability
+              I am passionate about Web Development and I aim to deliver feature rich web applications that are aesthetically pleasing, responsive and compliant with the latest accessibility
               standards.
               <br /><br />
               In my free time I like to listen to music, play PC games and binge watch movies and tv shows.
