--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,9 @@
               <br /><br />
               In my free time I like to listen to music, play PC games and binge watch movies and tv shows.
             </p>
-            <button><i class="fa-solid fa-file"></i> View Resume</button>
+            <div class="btnContainer">
+              <a href="resources/Trevin Shu - Resume 2022.pdf" target="_blank"><i class="fa-solid fa-file"></i> View Resume</a>
+            </div>
           </div>
         </section>
       </div>
