--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="sassContainer">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="100px" width="100px" loading="lazy"/>
-            <h4>SASS</h4>
+            <h4>SCSS</h4>
           </div>
           <div class="dotNetContainer">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-plain.svg" height="100px" width="100px" loading="lazy"/>
@@ -129,8 +129,8 @@
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
             <p>
-              Using TheMovieDB API I built this full responsive movie/tv show web application with HTML, SCSS & Vanilla JavaScript that allows a user to lookup information on tv shows & movies. In order to do this a user can use the 
-              search input field to search for a specific movie/tv show they are looking for or they can select a movie/tv show from a list of pre-made categories that are displayed on the homepage when the page
+              Using TheMovieDB API I built this fully responsive web application with HTML, SCSS & Vanilla JavaScript that allows an user to lookup information on tv shows & movies. In order to find a movie a user can use the 
+              search input field to search for a specific movie/tv show they are looking for or they can select a movie/tv show from a list of pre-made genre categories that are displayed on the homepage when the page
               is loaded. I also custom built an arrow slider that swaps through pages of movies & tv shows.
               <br><br>
               Additional features include a dark/light mode which saves the users color mode preference to local storage so the next time they use the site the site UI will match their preferred color scheme.
@@ -155,9 +155,9 @@
             <h2>Recipe App</h4>
             <h4>Description:</h4>
             <p>
-              Using TheMealDB API I built this full responsive recipe lookup web application with HTML, SCSS & Vanilla JavaScript. The user has two options to find recipes. 
-              They can select a food category from the list of food categories that are displayed on page load which will then display a number of recipes that match that category or they can search for a recipe which 
-              will output a list of recipes that match or are closely related to the search term provided by the user. I also custom designed & implemented a modal that shows a more detailed version of the recipe when clicked.
+              Using TheMealDB API I built this fully responsive web application with HTML, SCSS & Vanilla JavaScript that let's an user lookup recipes. The user has two options to find recipes. 
+              They can select a food category from the list of food categories that are displayed on page load which will then display a number of recipes that match that category or are closely related to that category. They can also search for a recipe which 
+              will output a list of recipes that match or are closely related to the search term provided by the user. I also custom designed & implemented a modal that shows a more detailed version of the recipe that the user clicked on.
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
@@ -178,9 +178,9 @@
             </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
-            <p>Using the OpenWeather API I built this full responsive weather web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup the weather of a specific location. In order to 
-              search the weather the user has to enter the city & country code in the appropriate input fields and hit search. The banner image will change based on the location that is inputted so for example if a user searches for Tokyo the banner image 
-              will dynamically swap to something that it is related to Tokyo. Also I included a toggle that when clicked switches from Celsius to Fahrenheit & vise versa without reloading the page.</p>
+            <p>Using the OpenWeather API I built this fully responsive web application with HTML, SCSS & Vanilla JavaScript which allows an user to lookup the weather of a specific location. In order to 
+              search the weather the user has to enter both the city & country code of the location they need the weather from in the appropriate input fields and hit search. When a search is performed the banner image will swap to an
+               image that's relevant to the location they searched for & this was accomplished using Unsplash. Finally I included a toggle that when clicked switches from Celsius to Fahrenheit & vise versa without reloading the page.</p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
