updated site copy

--- a/src/index.html
+++ b/src/index.html
@@ -200,9 +200,11 @@
             </picture>
             <h2>ESW Reporting Portal</h2>
             <h4>Description:</h4>
-            <p>Myself and a team of 18 other developers redesigned & redeveloped an existing internal reporting service for ESW I.T. Business Advisors using HTML, CSS & React. We retrieved & displayed data using an internal API that was provided to us by the client & in smalls group of three to four developers 
-              we worked on components that were assigned to us which we later added to the application after a code review by our team leads. Myself & the other developers implemented a Trello board which kept track of what we needed to accomplish, what we have accomplished 
-              & what needed more attention from either the design team or the development team. We held weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.
+            <p>Myself and a team of 18 other developers redesigned & redeveloped an existing internal reporting service for ESW I.T. Business Advisors using HTML, CSS & React. 
+              We retrieved & displayed data using an internal API that was provided to us by the client & in smalls group of three to four developers 
+              we worked on components that were assigned to us which we later added to the application after we went through a code review by our team leads. Myself & the other developers 
+              implemented a Trello board which kept track of what we needed to accomplish, what we have accomplished & what needed more attention from either the design team or the 
+              development team. We held weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
