reordered skills container and added more skills

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,22 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="100px" width="100px" loading="lazy"/>
             <h4>SCSS</h4>
           </div>
+          <div class="npmContainer">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" height="100px" width="100px" loading="lazy"/>
+            <h4>NPM</h4>
+          </div>
+          <div class="parcelContainer">
+            <img src="img/parcel-seeklogo.com.svg" height="100px" width="100px" loading="lazy"/>
+            <h4>Parcel Bundler</h4>
+          </div>
+          <div class="gitContainer">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain.svg" height="100px" width="100px" loading="lazy"/>
+            <h4>GIT</h4>
+          </div>
+          <div class="githubContainer">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" height="100px" width="100px" loading="lazy"/>
+            <h4>GitHub</h4>
+          </div>
           <div class="dotNetContainer">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>ASP.NET Framework</h4>
@@ -95,17 +111,13 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/materialui/materialui-plain.svg" height="100px" width="100px" loading="lazy"/>
             <h4>Material UI Framework</h4>
           </div>
-          <div class="gitContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain.svg" height="100px" width="100px" loading="lazy"/>
-            <h4>GIT</h4>
+          <div class="netlifyContainer">
+            <img src="img/netlify.svg" height="100px" width="100px" loading="lazy"/>
+            <h4>Netlify</h4>
           </div>
-          <div class="githubContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" height="100px" width="100px" loading="lazy"/>
-            <h4>GitHub</h4>
-          </div>
-          <div class="npmContainer">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" height="100px" width="100px" loading="lazy"/>
-            <h4>NPM</h4>
+          <div class="vercelContainer">
+            <img src="img/vercel.svg" height="100px" width="100px" loading="lazy"/>
+            <h4>Vercel</h4>
           </div>
           <div class="vsCodeContainer">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" height="100px" width="100px" loading="lazy"/>
