updated project description language/imagery

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
             </picture>
             <h2>ESW Reporting Portal</h2>
             <h4>Description:</h4>
-            <p>Myself and a team of 18 other developers redesigned & redeveloped an existing internal reporting service for ESW I.T. Business Advisors using HTML, CSS & React. 
+            <p>Myself and a team of 18 other developers redesigned & redeveloped an existing internal reporting service for ESW I.T. Business Advisors using React. 
               We retrieved & displayed data using an internal API that was provided to us by the client & in smalls group of three to four developers 
               we worked on components that were assigned to us which we later added to the application after we went through a code review by our team leads. Myself & the other developers 
               implemented a Trello board which kept track of what we needed to accomplish, what we have accomplished & what needed more attention from either the design team or the 
@@ -220,8 +220,6 @@
             </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" loading="lazy"/>
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" loading="lazy"/>
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" height="75px" width="75px" loading="lazy"/>
             </div>
             <h4>Username/Password:</h4>
