updated live link and github link for esw reporting portal project

--- a/src/index.html
+++ b/src/index.html
@@ -229,8 +229,8 @@
               <p><span>Note: Data/Functionality is limited due to privacy concerns.</span></p>
             </div>
             <div class="btnContainer">
-              <a href="https://github.com/Zachlson/ESW-Reporting-Portal-Scrubbed" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
-              <a href="https://main--capstone-demo.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
+              <a href="https://github.com/trevinshu/ESW-Reporting-Portal-Scrubbed" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
+              <a href="https://capstone-demo.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
         </div>
