--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="GNgIOE3d_xjHbBKm2BZrarhFqhZh0-YsTYhNGqJ_Zvg" />
     <title>Trevin Shu | Portfolio</title>
     <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="scss/main.scss" />
